fixed issues with fonts not changing, fixed issue where tickerline is not showing, troubleshooting issue where finding ticker crashes app

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -4,6 +4,14 @@
 html,
 .wrap {
   background-color: rgb(241, 244, 248);
+  font-family: $roboto;
+}
+
+.form-label,
+.text-center,
+.btn-dark,
+.text-dark {
+  font-family: $roboto;
 }
 
 body {
